--- a/package.json
+++ b/package.json
@@ -20,17 +20,22 @@
     "@ionic/vue-router": "^8.0.0",
     "chart.js": "^4.4.3",
     "chartjs-plugin-zoom": "^2.0.1",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.0.1",
     "ionicons": "^7.0.0",
     "vue": "^3.3.0",
     "vue-chartjs": "^5.3.1",
+    "vue-leaflet": "^0.1.0",
     "vue-router": "^4.2.0",
+    "vue2-leaflet": "^2.7.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@capacitor/cli": "6.1.2",
+    "@types/crypto-js": "^4.2.2",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.3.0",
     "autoprefixer": "^10.4.20",
@@ -39,6 +44,7 @@
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^22.1.0",
+    "leaflet": "^1.9.4",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
     "terser": "^5.4.0",
